--- a/style.css
+++ b/style.css
@@ -16,3 +16,10 @@ h1 {
     font-family: 'Barlow Condensed', sans-serif;
     width: 600px;
 }
+
+#HolyWar {
+     background-color: pink;
+    color: red;
+    
+}
+
