--- a/style.css
+++ b/style.css
@@ -16,3 +16,7 @@ h1 {
     font-family: 'Barlow Condensed', sans-serif;
     width: 600px;
 }
+#Tearsdontfall {
+    background-color: grey;
+    color: black;
+}
